# rag-and-agentic-solution

./: .gitignore  README.md  pyproject.toml
src/: 1_embeddings.ipynb  2_document_loading.ipynb  3.5_vector_database_indexes.ipynb  3_chunking.ipynb  4_vector_db.ipynb  4_vector_db_cosine.ipynb  5_retrieval.ipynb  6_generation.ipynb  __init__.py  eval.py  rag.ipynb
src/data/: story.md
